test/ok/void_implicit_cast.c4
let b: int = 10;
let a: &int = &b;
