test/fail/mut.c4
let a: * void = nullptr;
let b: * mut void = a;
